<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tittle_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tittle_kef"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="30dp"

        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="#FF5722"
        android:inputType="textMultiLine"
        android:paddingHorizontal="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle_input" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/build"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FF5722"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingHorizontal="4dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/tittle_input"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/trueWindow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/info"
        app:layout_constraintEnd_toStartOf="@+id/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/info" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/falseWindow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:background="@android:color/holo_red_light"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/info"
        app:layout_constraintTop_toTopOf="@+id/info" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/info"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="#000000"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/second_txt"
        app:layout_constraintEnd_toEndOf="@+id/third_txt"
        app:layout_constraintStart_toStartOf="@+id/first_txt"
        app:layout_constraintTop_toBottomOf="@+id/input" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginEnd="15px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/second_txt"
        app:layout_constraintEnd_toStartOf="@+id/second_txt"
        app:layout_constraintTop_toTopOf="@+id/second_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/second_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginTop="150px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/input"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toBottomOf="@id/input" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/third_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginStart="15px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/second_txt"
        app:layout_constraintStart_toEndOf="@+id/second_txt"
        app:layout_constraintTop_toTopOf="@+id/second_txt"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fourth_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginEnd="15px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/fifth_txt"
        app:layout_constraintEnd_toStartOf="@+id/second_txt"
        app:layout_constraintTop_toTopOf="@+id/fifth_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fifth_txt"
        android:layout_width="250px"
        android:layout_height="90px"
        android:layout_marginTop="30px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/input"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toBottomOf="@+id/second_txt" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sixth_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginStart="15px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/fifth_txt"
        app:layout_constraintStart_toEndOf="@+id/second_txt"
        app:layout_constraintTop_toTopOf="@+id/fifth_txt" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/seventh_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginEnd="15px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/eighth_txt"
        app:layout_constraintEnd_toStartOf="@+id/second_txt"
        app:layout_constraintTop_toTopOf="@+id/eighth_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/eighth_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginTop="30px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/input"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toBottomOf="@+id/fifth_txt" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tenth_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginStart="15px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/eighth_txt"
        app:layout_constraintStart_toEndOf="@+id/second_txt"
        app:layout_constraintTop_toTopOf="@+id/eighth_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/eleventh_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginEnd="15px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/twelfth_txt"
        app:layout_constraintEnd_toStartOf="@+id/second_txt"
        app:layout_constraintTop_toTopOf="@+id/twelfth_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/twelfth_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginTop="30px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/input"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toBottomOf="@+id/eighth_txt" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ninth_txt"
        android:layout_width="270px"
        android:layout_height="90px"
        android:layout_marginStart="15px"
        android:background="#FF5722"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/twelfth_txt"
        app:layout_constraintStart_toEndOf="@+id/second_txt"
        app:layout_constraintTop_toTopOf="@+id/twelfth_txt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clean"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:background="@drawable/clear"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tittle_timer"
        app:layout_constraintEnd_toEndOf="@+id/twelfth_txt"
        app:layout_constraintStart_toStartOf="@+id/twelfth_txt"
        app:layout_constraintTop_toBottomOf="@+id/twelfth_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editTimerTittle"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/tittle_edit_timer"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tittle_timer"
        app:layout_constraintEnd_toStartOf="@+id/editTime"
        app:layout_constraintStart_toStartOf="@+id/eleventh_txt"
        app:layout_constraintTop_toBottomOf="@+id/twelfth_txt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTime"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="35dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tittle_timer"
        app:layout_constraintEnd_toEndOf="@+id/ninth_txt"
        app:layout_constraintStart_toStartOf="@+id/twelfth_txt"
        app:layout_constraintTop_toBottomOf="@+id/twelfth_txt" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tittle_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/tittle_timer"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/twelfth_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timer"
        android:layout_width="100px"
        android:layout_height="50px"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tittle_timer"
        app:layout_constraintStart_toStartOf="@+id/tittle_timer"
        app:layout_constraintTop_toBottomOf="@+id/tittle_timer" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FF5722"
        android:text="@string/button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/timer"
        app:layout_constraintStart_toStartOf="@+id/timer"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:visibility="invisible"
        android:text="@string/buttonTest"
        app:layout_constraintBottom_toBottomOf="@+id/start"
        app:layout_constraintEnd_toEndOf="@+id/timer"

        app:layout_constraintStart_toStartOf="@+id/timer"
        app:layout_constraintTop_toTopOf="@+id/start" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addText"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/true_tittle"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input" />

</androidx.constraintlayout.widget.ConstraintLayout>